# sauerbraten-upstream-collect

./: CMakeLists.txt  README.md
fpsgame/: client.cpp  game.h  server.cpp
